--- a/SpringBoot/helloword/pom.xml
+++ b/SpringBoot/helloword/pom.xml
@@ -25,6 +25,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!-- thymeleaf -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
         <!-- 支持 xml数据格式返回 -->
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
